<resources>
    <string name="app_name">TimeCrafts</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signed">Sign Up</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_login">Already have an account? Log in</string>
    <string name="don_t_have_an_account_sign_in">Dont have an account? Sign up</string>
</resources>
